Adds info and release notes for disabledFeatures.

--- a/files/en-us/mozilla/firefox/releases/92/index.html
+++ b/files/en-us/mozilla/firefox/releases/92/index.html
@@ -49,6 +49,10 @@ tags:
 
 <h3 id="APIs">APIs</h3>
 
+<ul>
+  <li>The <code>disabledFeatures</code> static property has been implemented for Custom Elements ({{bug(1723396)}}).</li>
+</ul>
+
 <h4 id="DOM">DOM</h4>
 
 <h4 id="Media_WebRTC_and_Web_Audio">Media, WebRTC, and Web Audio</h4>
