more consistent notation

--- a/files/en-us/web/svg/element/symbol/index.html
+++ b/files/en-us/web/svg/element/symbol/index.html
@@ -10,7 +10,7 @@ browser-compat: svg.elements.symbol
 
 <p>The <strong><code>&lt;symbol&gt;</code></strong> element is used to define graphical template objects which can be instantiated by a {{SVGElement("use")}} element.</p>
 
-<p>The use of <code>symbol</code> elements for graphics that are used multiple times in the same document adds structure and semantics. Documents that are rich in structure may be rendered graphically, as speech, or as Braille, and thus promote accessibility.</p>
+<p>The use of <code>&lt;symbol&gt;</code> elements for graphics that are used multiple times in the same document adds structure and semantics. Documents that are rich in structure may be rendered graphically, as speech, or as Braille, and thus promote accessibility.</p>
 
 <div id="Example">
 <div class="hidden">
