FF92: AVIF - relnote and image updates (#8005)

--- a/files/en-us/mozilla/firefox/experimental_features/index.html
+++ b/files/en-us/mozilla/firefox/experimental_features/index.html
@@ -1256,6 +1256,54 @@ tags:
 </table>
 
 
+<h4 id="AVIF_compliance_strictness">AVIF compliance strictness</h4>
+
+<p>The <code>image.avif.compliance_strictness</code> preference can be used to control the <em>strictness</em> appliied when processing <a href="/en-US/docs/Web/Media/Formats/Image_types#avif">AVIF</a> images.
+  This allows Firefox users to display images that render on some other browsers, even if they are not strictly compliant.</p>
+
+<p>Permitted values are:</p>
+<ul>
+  <li><code>0</code>: Accept images with specification violations in both recommendations ("should" language) and requirements ("shall" language), provided they can be safely or unambigiously intepretted.</li>
+  <li><code>1</code> (default): Reject violations of requirements, but allow violations of recommendations.</li>
+  <li><code>2</code>: Strict. Reject any violations in requirements or recommendations.</li>
+</ul>
+
+<table class="standard-table">
+ <thead>
+  <tr>
+   <th scope="col" style="vertical-align: bottom;">Release channel</th>
+   <th scope="col" style="vertical-align: bottom;">Version added</th>
+   <th scope="col" style="vertical-align: bottom;">Default value</th>
+  </tr>
+ </thead>
+ <tbody>
+  <tr>
+   <th scope="row">Nightly</th>
+   <td>92</td>
+   <td>1</td>
+  </tr>
+  <tr>
+   <th scope="row">Developer Edition</th>
+   <td>92</td>
+   <td>1</td>
+  </tr>
+  <tr>
+   <th scope="row">Beta</th>
+   <td>92</td>
+   <td>1</td>
+  </tr>
+  <tr>
+   <th scope="row">Release</th>
+   <td>92</td>
+   <td>1</td>
+  </tr>
+  <tr>
+   <th scope="row">Preference name</th>
+   <th colspan="2"><code>image.avif.compliance_strictness</code></th>
+  </tr>
+ </tbody>
+</table>
+
 <h4 id="AV1_support_for_Firefox_on_Android">AV1 support for Firefox on Android</h4>
 
 <p>This feature allows Firefox on Android to use <a href="/en-US/docs/Web/Media/Formats/Video_codecs#av1">AV1 format media</a>. This feature is available in nightly builds effective in Firefox for Android 81 or later. It is enabled by default.</p>
