--- a/files/en-us/web/events/index.html
+++ b/files/en-us/web/events/index.html
@@ -325,7 +325,7 @@ tags:
 			<p><a href="/en-US/docs/Web/API/Selection">Selection API</a> events related to selecting text.</p>
 		</td>
 		<td>
-			<p>Events (<code>selectionchange</code>) fired on {{domxref("HTMLTextAreaElement/selectionchange_event", "HTMLTextAreaElement")}}, {{domxref("HTMLInputElement/selectionchange_event", "HTMLInputElement")}}.</p>
+			<p>Event (<code>selectionchange</code>) fired on {{domxref("HTMLTextAreaElement/selectionchange_event", "HTMLTextAreaElement")}}, {{domxref("HTMLInputElement/selectionchange_event", "HTMLInputElement")}}.</p>
 		</td>
 	</tr>
 
