Add "ftps" in allowed schemes all_urls

--- a/files/en-us/mozilla/add-ons/webextensions/match_patterns/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/match_patterns/index.html
@@ -94,7 +94,7 @@ browser-compat: webextensions.match_patterns.scheme
 
 <h3 id="&lt;all_urls&gt;">&lt;all_urls&gt;</h3>
 
-<p>The special value <code>&lt;all_urls&gt;</code> matches all URLs under any of the supported schemes: that is "http", "https", "ws", "wss", "ftp", "data", and "file".</p>
+<p>The special value <code>&lt;all_urls&gt;</code> matches all URLs under any of the supported schemes: that is "http", "https", "ws", "wss", "ftp", "ftps", "data", and "file".</p>
 
 <h2 id="Examples">Examples</h2>
 
