Remove `Headers.getAll()`
Content counterpart to https://github.com/mdn/browser-compat-data/pull/12166

--- a/files/en-us/mozilla/firefox/releases/52/index.html
+++ b/files/en-us/mozilla/firefox/releases/52/index.html
@@ -147,7 +147,7 @@ tags:
 <h3 id="Service_Workers_and_Fetch">Service Workers and Fetch</h3>
 
 <ul>
- <li>The {{domxref("Headers.getAll()")}} method has been removed, and {{domxref("Headers.get()")}} now retrieves all values of the specified header, not just the first one (see {{bug(1278275)}}). This is in accordance with the latest Fetch API spec updates.</li>
+ <li>The <code>Headers.getAll()</code> method has been removed, and {{domxref("Headers.get()")}} now retrieves all values of the specified header, not just the first one (see {{bug(1278275)}}). This is in accordance with the latest Fetch API spec updates.</li>
 </ul>
 
 <h3 id="Web_Audio_API">Web Audio API</h3>
