--- a/files/en-us/mozilla/add-ons/webextensions/manifest.json/permissions/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/manifest.json/permissions/index.html
@@ -107,6 +107,7 @@ browser-compat: webextensions.manifest.permissions
  <li><code>management</code></li>
  <li><code>menus</code></li>
  <li><code>menus.overrideContext</code></li>
+ <li><code>nativeMessaging</code></li>
  <li><code>notifications</code></li>
  <li><code>pageCapture</code></li>
  <li><code>pkcs11</code></li>
