Property pages need no syntax section

--- a/files/en-us/mdn/structures/syntax_sections/index.html
+++ b/files/en-us/mdn/structures/syntax_sections/index.html
@@ -170,20 +170,9 @@ unshift(element0, element1, ... , elementN)
 
 <h3 id="Properties">Properties</h3>
 
-<h4 id="Syntax_block_2">Syntax block</h4>
-
-<p>Start with a syntax block, like this (see {{DOMxRef("IntersectionObserver.root")}}):</p>
-
-<pre class="brush: js">var root = observer.root;</pre>
-
-<p>For a non-read-only property, it is a good idea to include two lines, which show getting and setting the property (see {{DOMxRef("AudioParam.value")}}):</p>
-
-<pre class="brush: js">gain = gainNode.gain.value;
-gainNode.gain.value = 0;</pre>
-
 <h4 id="Value_section">Value section</h4>
 
-<p>Below the syntax block you need to include a "Value" subsection, which contains a explanation of the property's value — both its data type and what its purpose is.</p>
+<p>Properties contain no syntax section. Instead, add a "Value" section containing an explanation of the property's value. Describe its data type and what its purpose is.</p>
 
 <h4 id="Exceptions_section_2">Exceptions section</h4>
 
