--- a/files/en-us/mozilla/firefox/releases/55/index.html
+++ b/files/en-us/mozilla/firefox/releases/55/index.html
@@ -199,7 +199,7 @@ tags:
 <h3 id="APIs_2">APIs</h3>
 
 <ul>
- <li>The {{domxref("UIEvent.isChar")}} property has never been supported by any browser but Firefox, and it has never been fully-implemented except on macOS. For that reason, it was removed in Firefox 55 to align with other browsers.</li>
+ <li>The <code>UIEvent.isChar</code> property has never been supported by any browser but Firefox, and it has never been fully-implemented except on macOS. For that reason, it was removed in Firefox 55 to align with other browsers.</li>
  <li>The proprietary Firefox OS Device Storage API has been removed from the platform ({{bug(1299500)}}).</li>
  <li>The <code>aShowDialog</code> parameter of the non-standard {{domxref("Window.find()")}} method (which could be specified to open up a "Find" dialog in the browser) has been removed ({{bug(1348409)}}).</li>
  <li>The <code>HTMLFormElement.requestAutoComplete()</code> method has been removed (see {{domxref("HTMLFormElement")}}) ({{bug(1270740)}}).</li>
