--- a/files/en-us/mozilla/firefox/releases/72/index.html
+++ b/files/en-us/mozilla/firefox/releases/72/index.html
@@ -118,7 +118,7 @@ tags:
 <h4 id="Service_workers">Service workers</h4>
 
 <ul>
- <li>The {{domxref("WindowOrWorkerGlobalScope.crossOriginIsolated")}} property is now supported ({{bug(1591892)}}).</li>
+ <li>The {{domxref("crossOriginIsolated")}} property is now supported ({{bug(1591892)}}).</li>
 </ul>
 
 <h4 id="Media_Web_Audio_and_WebRTC">Media, Web Audio, and WebRTC</h4>
