Changed table to version changed to reflect FF92 is when enabled by default on FF

--- a/files/en-us/mozilla/firefox/experimental_features/index.html
+++ b/files/en-us/mozilla/firefox/experimental_features/index.html
@@ -1220,14 +1220,14 @@ tags:
  <thead>
   <tr>
    <th scope="col" style="vertical-align: bottom;">Release channel</th>
-   <th scope="col" style="vertical-align: bottom;">Version added</th>
+   <th scope="col" style="vertical-align: bottom;">Version changed</th>
    <th scope="col" style="vertical-align: bottom;">Enabled by default?</th>
   </tr>
  </thead>
  <tbody>
   <tr>
    <th scope="row">Nightly</th>
-   <td>71</td>
+   <td>92</td>
    <td>Yes</td>
   </tr>
   <tr>
