Only affects windows

--- a/files/en-us/mozilla/firefox/experimental_features/index.html
+++ b/files/en-us/mozilla/firefox/experimental_features/index.html
@@ -1227,8 +1227,8 @@ tags:
  <tbody>
   <tr>
    <th scope="row">Nightly</th>
-   <td>92</td>
-   <td>Yes</td>
+   <td>71</td>
+   <td>No (default). Yes (Windows from version 92)</td>
   </tr>
   <tr>
    <th scope="row">Developer Edition</th>
