Line element better code for user ease.
When a user copies the code of Line element and runs in local device, it shows nothing. It is because there is no stroke attribute associated. So, here I have proposed change for line element code.

--- a/files/en-us/web/svg/tutorial/basic_shapes/index.html
+++ b/files/en-us/web/svg/tutorial/basic_shapes/index.html
@@ -95,7 +95,7 @@ tags:
 
 <p>The {{SVGElement("line")}} element takes the positions of two points as parameters and draws a straight line between them.</p>
 
-<pre class="brush:xml;gutter:false;">&lt;line x1="10" x2="50" y1="110" y2="150"/&gt;</pre>
+<pre class="brush:xml;gutter:false;">&lt;line x1="10" x2="50" y1="110" y2="150" stroke="black" stroke-width="5"/&gt;</pre>
 
 <dl>
  <dt><code>x1</code></dt>
