Sidebars included in extension.getViews when windowId specified

--- a/files/en-us/mozilla/firefox/releases/93/index.html
+++ b/files/en-us/mozilla/firefox/releases/93/index.html
@@ -53,6 +53,10 @@ tags:
 
 <h2 id="Changes_for_add-on_developers">Changes for add-on developers</h2>
 
+<ul>
+  <li>Sidebars are now included in {{WebExtAPIRef("extension.getViews")}} when <code>windowId</code> is specified ({{bug(1612390)}}).</li>
+</ul>
+
 <h4 id="removals_webext">Removals</h4>
 
 <h2 id="Older_versions">Older versions</h2>
