--- a/files/en-us/web/webdriver/index.html
+++ b/files/en-us/web/webdriver/index.html
@@ -22,15 +22,18 @@ tags:
 
 <p>But using a popular client written in Python, your interaction with WebDriver might look like this:</p>
 
-<pre>from selenium import webdriver
+<pre>
+from selenium import webdriver
 from selenium.webdriver.common.by import By
 from selenium.webdriver.common.keys import Keys
 from selenium.webdriver.support.ui import WebDriverWait
 from selenium.webdriver.support.expected_conditions import presence_of_element_located
 
-wait = WebDriverWait(driver, 10)
+
 
 with webdriver.Firefox() as driver:
+
+    wait = WebDriverWait(driver, 10)
     driver.get("http://google.com/ncr")
     driver.find_element_by_name("q").send_keys("cheese" + Keys.RETURN)
 
@@ -38,7 +41,8 @@ with webdriver.Firefox() as driver:
 
     results = driver.find_elements_by_css_selector("h3&gt;a")
     for i, result in results.iteritems():
-        print("#{}: {} ({})".format(i, result.text, result.get_property("href")))</pre>
+        print(f"#{i}: {result.text} ({result.get_property('href')})")
+</pre>
 
 <p>This might produce output akin to this:</p>
 
