--- a/files/en-us/mdn/structures/macros/commonly-used_macros/index.html
+++ b/files/en-us/mdn/structures/macros/commonly-used_macros/index.html
@@ -151,6 +151,7 @@ tags:
 <ul>
  <li><code><a href="https://github.com/mdn/yari/tree/master/kumascript/macros/EmbedLiveSample.ejs">EmbedLiveSample</a></code> lets you embed the output of a code sample on a page, as described in <a href="/en-US/docs/MDN/Structures/Live_samples">Live samples</a>.</li>
  <li><code><a href="https://github.com/mdn/yari/tree/master/kumascript/macros/LiveSampleLink.ejs">LiveSampleLink</a></code> creates a link to a page containing the output of a code sample on a page, as described in <a href="/en-US/docs/MDN/Structures/Live_samples">Live samples</a>.</li>
+ <li><code>{{TemplateLink("EmbedGHLiveSample")}} supported a new way to simply inserting live sample. You can get more information at <a href="/en-US/docs/MDN/Structures/Code_examples#github_live_samples">Github live samples</a>.</li>
 </ul>
 
 <h2 id="Sidebar_generation">Sidebar generation</h2>
