SVG: x and y attributes can be set for <cursor>

--- a/files/en-us/web/svg/attribute/x/index.html
+++ b/files/en-us/web/svg/attribute/x/index.html
@@ -13,6 +13,7 @@ tags:
 
 <ul>
   <li>{{SVGElement("altGlyph")}}</li>
+  <li>{{SVGElement("cursor")}}</li>
   <li>{{SVGElement("feBlend")}}</li>
   <li>{{SVGElement("feColorMatrix")}}</li>
   <li>{{SVGElement("feComponentTransfer")}}</li>
