SVG: x and y attributes can be set for <symbol>

--- a/files/en-us/web/svg/attribute/x/index.html
+++ b/files/en-us/web/svg/attribute/x/index.html
@@ -46,6 +46,7 @@ tags:
   <li>{{SVGElement("pattern")}}</li>
   <li>{{SVGElement("rect")}}</li>
   <li>{{SVGElement("svg")}}</li>
+  <li>{{SVGElement("symbol")}}</li>
   <li>{{SVGElement("text")}}</li>
   <li>{{SVGElement("tref")}}</li>
   <li>{{SVGElement("tspan")}}</li>
