--- a/files/en-us/web/svg/attribute/y/index.html
+++ b/files/en-us/web/svg/attribute/y/index.html
@@ -13,6 +13,7 @@ tags:
 
 <ul>
   <li>{{SVGElement("altGlyph")}}</li>
+  <li>{{SVGElement("cursor")}}</li>
   <li>{{SVGElement("feBlend")}}</li>
   <li>{{SVGElement("feColorMatrix")}}</li>
   <li>{{SVGElement("feComponentTransfer")}}</li>
@@ -45,6 +46,7 @@ tags:
   <li>{{SVGElement("pattern")}}</li>
   <li>{{SVGElement("rect")}}</li>
   <li>{{SVGElement("svg")}}</li>
+  <li>{{SVGElement("symbol")}}</li>
   <li>{{SVGElement("text")}}</li>
   <li>{{SVGElement("tref")}}</li>
   <li>{{SVGElement("tspan")}}</li>
